--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -7,7 +7,14 @@
 
 <!--Temporary templates until we get the actual html files-->
 <template name="header">
-  <div>header</div>
+  <table width="1000">
+<tr>
+<td> <button type="button"> Jobs in ICT </button> </td>
+<td> <button type="button"> Home </button></td>
+<td> <button type="button"> Login </button> </td>
+<td> <input type="text" name="search"> </td>
+<td> <button type="button"> Search </button></td>
+</table>
 </template>
 
 <template name="page">
