--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -1,7 +1,8 @@
 <!--
-Zachary Pearson
-1/7/2016
+  Author: Zachary Pearson
+  Created: 1/7/2016
 -->
+
 <template name="view_listing">
   <div class=titlebox>
     <div class="title">
