updated header and footer

--- a/stylesheets/modules/create_listing.css
+++ b/stylesheets/modules/create_listing.css
@@ -5,6 +5,12 @@ Zachary Pearson
 .applicationURL{
   display:none;
 }
+
+/* Temporary Fix */
+.cr_lstng {
+  margin-top: 60px;
+}
+
 .cr_lstng-applicationURL{
   display:none;
 }
