--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -1,7 +1,8 @@
 <template name="main">
-  {{> header}}
-  {{> yield}}
-  {{> footer}}
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    {{> header}}
+    {{> yield}}
+    {{> footer}}
 </template>
 
 
