Adds create job function

--- a/stylesheets/modules/create_listing.css
+++ b/stylesheets/modules/create_listing.css
@@ -12,6 +12,9 @@ Zachary Pearson
 margin-top:10px;
 margin-bottom:10px;
 }
+.cr_lstng-company{
+margin-bottom:10px;
+}
 .cr_lstng-description{
 margin-bottom:10px;
 }
