--- a/templates/modules/create_listing/create_listing.html
+++ b/templates/modules/create_listing/create_listing.html
@@ -9,6 +9,10 @@
       Title:<br>
       <input type="text" name="title">
     </div>
+    <div class="cr_lstng-company">
+      Company:<br>
+      <input type="text" name="company">
+    </div>
     <div class="cr_lstng-description">
       Description:<br>
       <textarea rows="20" cols="80" name="description"></textarea>
