Adds login functionality

--- a/templates/header-footer/header-footer.html
+++ b/templates/header-footer/header-footer.html
@@ -2,7 +2,7 @@
   <div class = "hdr">
     <div class = "hdr_ttl">Jobs in ICT</div>
     <a href = '/'><div class = "hdr_home">Home</div></a>
-    <div class = "hdr_login">Login</div>
+    <div class = "hdr_login"><!--Login-->{{> loginButtons}}</div>
     <div class = "hdr_txt"><input type = "search"></div>
     <a href = '/search'><div class = "hdr_search">Search</div></a>
   </div>
