Adds create data to view
To use it for now, go to localhost/create, make a job, then it will
automatically redirect to localhost/view/id

--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -4,11 +4,12 @@
 -->
 
 <template name="view_listing">
+  {{#each job}}
   <div class=titlebox>
     <div class="title">
       {{title}}
     </div>
-    <div class="publishedDate">{{published}}</div>
+    <div class="publishedDate">{{createdAt}}</div>
     <div class="info">
       <span class="company">{{company}}</span> - <span class="category">{{category}}</span>
     </div>
@@ -24,4 +25,5 @@
   <div class="application">
     <button type="button">Apply Now!</button>
   </div>
+  {{/each}}
 </template>
