--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -1,8 +1,9 @@
-/* CSS declarations go here */
-table {
-}
+/*
+** Author: Rishab
+** Created: 1/6/2015
+*/
 
-
+/* Header */
 .hdr {
   width: 100%;
   background-color: #3333ff;
@@ -40,14 +41,16 @@ table {
   margin-left: 5%;
   float: left;
 }
+
+a {
+  color: white;
+}
+
 a:visited {
   text-decoration: none;
   color: white;
 }
 
-a {
-  color: white;
-}
 div.hdr {
   font-family: 'Lato';
   font-size: 24px;
@@ -55,11 +58,7 @@ div.hdr {
   line-height: 45px;
 }
 
-footer {
+/* Footer */
+.footer {
   width: 100%;
-}
-
-
-body {
-  margin: 0px;
 }
