Adds Email/Website difference to view listing

--- a/stylesheets/view_listing.css
+++ b/stylesheets/view_listing.css
@@ -35,7 +35,14 @@
 }
 
 .perks {
+  margin-top:10px;
   margin-bottom:10px;
+  font-size: 16px;
+}
+
+.aplication {
+  margin-top:10px;
+  margin-bottom: 10px;
   font-size: 16px;
 }
 
