--- a/templates/header-footer/header-footer.html
+++ b/templates/header-footer/header-footer.html
@@ -4,7 +4,7 @@
     <a href = '/'><div class = "hdr_home">Home</div></a>
     <div class = "hdr_txt"><input type = "search"></div>
     <a href = '/search'><div class = "hdr_search">Search</div></a>
-    <div class = "hdr_login">{{> loginButtons}}</div>
+    <div class = "hdr_login">{{> loginButtons align="right"}}</div>
   </div>
 </template>
 
