--- a/templates/header-footer/header-footer.html
+++ b/templates/header-footer/header-footer.html
@@ -9,5 +9,7 @@
 </template>
 
 <template name = "footer">
-  <div class="footer"> <h1>Created by Ennovar </h1></div>
+  <div class = "footer">
+    <div class = "footer_txt">Created by Ennovar 2016</div>
+  </div>
 </template>
