--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -3,7 +3,26 @@
 ** Created: 1/8/2016
 */
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Lato';
   margin: 0px;
+  height: 100%;
+  position: relative;
+}
+
+.main {
+  min-height: 100%;
+  margin-bottom: -30px;
+}
+
+.push {
+  height: 30px;
+}
+
+.headpush {
+  height: 50px;
 }
