--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -1,10 +1,13 @@
 <template name="main">
+  <div class = "main">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     {{> header}}
+    <div class = "headpush"></div>
     {{> yield}}
-    {{> footer}}
+    <div class = "push"></div>
+  </div>
+  {{> footer}}
 </template>
-
 
 <!--Temporary templates until we get the actual html files-->
 
