--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -4,94 +4,81 @@ Created: [01/07/2016]
 Title:  homepage
 Associated Files: homepage.html, homepage.js and homepage.css
 */
-.dvhp {
+.home {
   background-color: #ffffff;
+  margin-left: 30px;
+  overflow: hidden;
 }
-.dvhp-tags {
+
+.home-tags {
   width: 100%;
-  height: auto;
+  height: 28px;
   overflow: hidden;
   padding-top: 5px;
-  line-height:25px;
+  line-height: 25px;
+  margin-top: 10px;
 }
-.dvhp-tags-list {
+.home-tag {
   min-width: 10px;
-  padding: 3px 7px;
-  font-size: 12px;
+  padding: 4px 8px;
+  font-size: 14px;
   line-height: 1;
   color: #ffffff;
   text-align: center;
   white-space: nowrap;
-  vertical-align: baseline;
-  background-color: #999;
   border-radius: 10px;
+  margin-right: 5px;
+  float: left;
+}
+.home-tags div:hover {
+  color:#ffffff;
   border: 1px solid #999;
 }
-.dvhp-tags a:hover {
-  background-color: #31b0d5;
-  color:#ffffff;
-  border: 1px solid #000000;
-}
 
-.dvhp-tags-list b {
-  color: #000000;
-}
-
-.dvhp-tags-active {
-  min-width: 10px;
-  padding: 3px 7px;
-  font-size: 12px;
-  line-height: 1;
-  color: #ffffff;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  background-color: #31b0d5;
-  border-radius: 10px;
-  border: 1px solid #31b0d5;
-}
-.dvhp-tags-active b {
-  color: #000000;
-}
-
-.dvhp-listing {
+.home-listing {
   width: 100%;
-  height: auto;
   overflow: hidden;
   padding-top: 5px;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.075);
   box-shadow: 0 1px 2px rgba(0,0,0,0.075);
+  margin-top: 10px
 }
 
-.dvhp-listing a {
+.home-listing a {
+  height: 60px;
   font-size: 18px;
   color: #555;
   position: relative;
   display: block;
-  padding: 10px 15px 20px 15px;
   margin-bottom: -1px;
   background-color: #fff;
   border: 1px solid #ddd;
+  text-decoration: none;
 }
-.dvhp-listing a:first-child {
+.home-listing a:first-child {
   border-top-right-radius: 8px;
   border-top-left-radius: 4px;
 }
-.dvhp-listing a:last-child {
+.home-listing a:last-child {
   border-bottom-right-radius: 8px;
   border-bottom-left-radius: 4px;
 }
-.dvhp-listing a:hover {
+.home-listing a:hover {
   background-color: #f5f5f5;
 }
 
-.title {
-  color: #269abc;
-  text-decoration: underline;
+.home-listing-lft {
+  margin: 5px 0px 0px 10px;
+  float: left;
 }
-.company {
-  color: #000000;
-  font-weight: bold;
+
+.home-listing-lft-txt {
+  font-size: 22px;
+}
+
+.home-listing-lft-txt div {
+  color: black;
+  display: inline-block;
 }
 
 .badge {
@@ -105,7 +92,8 @@ Associated Files: homepage.html, homepage.js and homepage.css
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-
+  margin-top: 5px;
+  margin-bottom: 5px;
   border-radius: 10px;
 }
 .pull-right {
