--- a/templates/modules/homepage/homepage.html
+++ b/templates/modules/homepage/homepage.html
@@ -4,28 +4,26 @@ Created: [01/07/2016]
 Title:  homepage
 Associated Files: homepage.html, homepage.js and homepage.css
 -->
-<template name="homepage">
-  <div class="dvhp">
+
+<template name = "homepage">
+  <div class="home">
     <!-- tags category -->
-    <div class="dvhp-tags">
-      {{# each categories}}
-      <a class="dvhp-tags-{{type}}" href="{{link}}">{{name}} <b>{{number}}</b></a>
+    <div class="home-tags">
+      {{#each categories}}
+        <div class="home-tag" id = "{{type}}" style = "background-color: {{color}}">{{name}} &nbsp;&nbsp;{{number}}</div>
       {{/each}}
     </div>
-    <div class="dvhp-listing">
 
-      {{# each listing}}
-      <a href="{{url}}">
-        <div>
-          <span class="title">{{title}}</span>&nbsp;
-          <span class="company">{{company}}</span>
+    <div class="home-listing">
+      {{#each listing}}
+      <a href="/view/{{_id}}">
+        <div class = "home-listing-lft">
+          <div class="home-listing-lft-txt" style = "color: {{color}}">{{title}} <div>&nbsp;-&nbsp;{{company}}</div></div>
+          <span class="badge" style = "background-color: {{color}}">{{category}}</span>
         </div>
-        <span class="badge pull-left">{{category}}</span>
-        <span class="badge pull-right"><b>{{status}}</b> {{date}}</span>
+        <span class="badge"><b>{{status}}</b> {{createdAt}}</span>
       </a>
       {{/each}}
-
     </div>
   </div>
-
 </template>
