--- a/templates/modules/create_listing/create_listing.html
+++ b/templates/modules/create_listing/create_listing.html
@@ -23,11 +23,11 @@
     </div>
     <div class="cr_lstng-category">
       Please Select the Job Category:<br>
-      <input type="radio" name="category" value="one">Category 1<br>
-      <input type="radio" name="category" value="two">Category 2<br>
-      <input type="radio" name="category" value="three">Category 3<br>
-      <input type="radio" name="category" value="four">Category 4<br>
-      <input type="radio" name="category" value="five">Category 5
+      <input type="radio" name="category" value="one">Programming<br>
+      <input type="radio" name="category" value="two">Design<br>
+      <input type="radio" name="category" value="three">Business Development<br>
+      <input type="radio" name="category" value="four">IT Admin / Support<br>
+      <input type="radio" name="category" value="five">Marketing
     </div>
     <div class="cr_lstng-application">
       How Should Applicants Apply?<br>
