--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -7,6 +7,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
 .home {
   background-color: #ffffff;
   margin-left: 30px;
+  margin-right: 30px;
   overflow: hidden;
 }
 
@@ -41,16 +42,15 @@ Associated Files: homepage.html, homepage.js and homepage.css
   padding-top: 5px;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.075);
   box-shadow: 0 1px 2px rgba(0,0,0,0.075);
-  margin-top: 10px
+  margin-top: 10px;
 }
 
 .home-listing a {
   height: 60px;
   font-size: 18px;
   color: #555;
-  position: relative;
   display: block;
-  margin-bottom: -1px;
+  margin-top: -1px;
   background-color: #fff;
   border: 1px solid #ddd;
   text-decoration: none;
@@ -96,14 +96,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
   margin-bottom: 5px;
   border-radius: 10px;
 }
-.pull-right {
+.fr {
   float: right!important;
   background-color: #999999;
-}
-.pull-right b {
-    color: #D10D27;
-}
-.pull-left {
-  float: left!important;
-  background-color: #31b0d5;
 }
