--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -52,14 +52,15 @@ Associated Files: homepage.html, homepage.js and homepage.css
   display: block;
   background-color: #fff;
   border: 1px solid #ddd;
+  margin-top: -1px;
   text-decoration: none;
 }
 .home-listing a:first-child {
-  border-top-right-radius: 8px;
+  border-top-right-radius: 4px;
   border-top-left-radius: 4px;
 }
 .home-listing a:last-child {
-  border-bottom-right-radius: 8px;
+  border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 .home-listing a:hover {
