--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -7,7 +7,6 @@ Associated Files: homepage.html, homepage.js and homepage.css
 .home {
   background-color: #ffffff;
   margin-left: 30px;
-  margin-right: 30px;
   overflow: hidden;
 }
 
@@ -29,6 +28,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
   white-space: nowrap;
   border-radius: 10px;
   margin-right: 5px;
+  cursor: pointer;
   float: left;
 }
 .home-tags div:hover {
@@ -42,15 +42,14 @@ Associated Files: homepage.html, homepage.js and homepage.css
   padding-top: 5px;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.075);
   box-shadow: 0 1px 2px rgba(0,0,0,0.075);
-  margin-top: 10px;
+  margin-top: 10px
 }
 
 .home-listing a {
-  height: 60px;
+  height: 65px;
   font-size: 18px;
   color: #555;
   display: block;
-  margin-top: -1px;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-top: -1px;
@@ -94,10 +93,32 @@ Associated Files: homepage.html, homepage.js and homepage.css
   white-space: nowrap;
   vertical-align: baseline;
   margin-top: 5px;
-  margin-bottom: 5px;
   border-radius: 10px;
 }
+
 .fr {
   float: right!important;
   background-color: #999999;
+  margin-top: 25px;
+  margin-right: 10px;
+}
+
+.red_fade {
+  background-color: #ff66cc !important;
+}
+
+.orange_fade {
+  background-color: #ff9933 !important;
+}
+
+.green_fade {
+  background-color: #66ff66 !important;
+}
+
+.blue_fade {
+  background-color: #66ccff !important;
+}
+
+.purple_fade {
+  background-color: #9933ff !important;
 }
