--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -5,10 +5,12 @@
 
 /* Header */
 .hdr {
+  height: 50px;
   width: 100%;
   background-color: #3333ff;
   position: fixed;
   top: 0px;
+  overflow: hidden;
 }
 
 .hdr_ttl {
@@ -33,8 +35,16 @@
 .hdr_txt {
   height: 50px;
   margin-left: 3%;
-  line-height: 40px;
+  line-height: 44px;
   float: left;
+}
+
+.hdr_txt input {
+  height: 26px;
+  font-family: Lato;
+  font-size: 18px;
+  border-radius: 4px;
+  border-color: rgba(0, 0, 0, 0.0);
 }
 
 .hdr_search, .hdr_create{
