--- a/templates/header-footer/header-footer.html
+++ b/templates/header-footer/header-footer.html
@@ -2,7 +2,9 @@
   <div class = "hdr">
     <div class = "hdr_ttl">Jobs in ICT</div>
     <a href = '/'><div class = "hdr_home">Home</div></a>
-    <div class = "hdr_txt"><input type = "search"></div>
+    <div class = 'hdr_txt'>
+      <input type = "search" id = "search" onsearch = "search()">
+    </div>
     <a href = '/search'><div class = "hdr_search">Search</div></a>
     <a href = '/create'><div class = "hdr_create">Create</div></a>
     <div class = "hdr_login">{{> loginButtons align="right"}}</div>
