--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -26,18 +26,66 @@
 
 .hdr_login {
   height: 50px;
-  margin-left: 5%;
+  margin-left: 3%;
   float: left;
 }
-
 .hdr_txt {
   height: 50px;
+  width: 50%;
   margin-left: 3%;
   line-height: 40px;
   float: left;
 }
+/*  switch to css base on max-width size */
+@media screen and (max-width: 1200px) {
+.hdr_txt {
+  height: 50px;
+  width: 40%;
+  margin-left: 3%;
+  line-height: 40px;
+  float: left;
+}
+}
+@media screen and (max-width: 800px) {
+.hdr_txt {
+  height: 50px;
+  width: 30%;
+  margin-left: 3%;
+  line-height: 40px;
+  float: left;
+}
+}
+@media screen and (max-width: 600px) {
+.hdr_txt {
+  height: 50px;
+  width: 30%;
+  margin-left: 3%;
+  line-height: 40px;
+  float: left;
 
-.hdr_search, .hdr_create{
+}
+.hdr_right {
+  display: none;
+  overflow: hidden;
+}
+}
+
+input[type=search] {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+
+	text-align: right;
+	cursor: pointer;
+/*	display: block;*/
+	width: 100%;
+/*	letter-spacing: 4px;*/
+/*	text-shadow: 0 0 2px black;*/
+	word-spacing: 20px;
+}
+
+.hdr_create{
   height: 50px;
   margin-left: 3%;
   float: left;
@@ -46,7 +94,7 @@
 
 div.hdr {
   font-family: 'Lato';
-  font-size: 24px;
+  font-size: 20px;
   color: #FFFFFF;
   line-height: 45px;
 }
