--- a/templates/modules/homepage/homepage.html
+++ b/templates/modules/homepage/homepage.html
@@ -10,7 +10,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
     <!-- tags category -->
     <div class="home-tags">
       {{#each categories}}
-        <div class="home-tag" id = "{{short}}" style = "background-color: {{color}}">{{name}} &nbsp;&nbsp;{{number}}</div>
+        <div class="home-tag" id = "{{short}}" style = "background-color: {{color}}"><div class="{{short}}-dot dot"></div>{{name}} &nbsp;&nbsp;{{number}}</div>
       {{/each}}
     </div>
 
