--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -10,6 +10,16 @@ Associated Files: homepage.html, homepage.js and homepage.css
   overflow: hidden;
 }
 
+.dot{
+  margin-top: 2px;
+  border-radius: 100%;
+  height:10px;
+  width: 10px;
+  background-color: #ffffff;
+  float:left;
+  display: none;
+}
+
 .home-tags {
   width: 100%;
   height: 28px;
