--- a/templates/modules/homepage/homepage.html
+++ b/templates/modules/homepage/homepage.html
@@ -21,7 +21,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
           <div class="home-listing-lft-txt" style = "color: {{color}}">{{title}} <div>&nbsp;-&nbsp;{{company}}</div></div>
           <span class="badge" style = "background-color: {{color}}">{{category}}</span>
         </div>
-        <span class="badge fr"><b>{{status}}</b> {{createdAt}}</span>
+        <span class="badge fr"><b>{{status}}</b> {{month}}/{{day}}</span>
       </a>
       {{/each}}
     </div>
