--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -12,6 +12,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
 
 .dot{
   margin-top: 2px;
+  margin-right: 3px;
   border-radius: 100%;
   height:10px;
   width: 10px;
@@ -40,10 +41,6 @@ Associated Files: homepage.html, homepage.js and homepage.css
   margin-right: 5px;
   cursor: pointer;
   float: left;
-}
-.home-tags div:hover {
-  color:#ffffff;
-  border: 1px solid #999;
 }
 
 .home-listing {
