--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -15,6 +15,7 @@
   height: 50px;
   margin-left: 15px;
   float: left;
+  color: #FFFFFF;
 }
 
 .hdr_home {
@@ -28,8 +29,12 @@
   height: 50px;
   margin-left: 5%;
   float: left;
+  max-width: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-input {
+.inputhp {
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -43,30 +48,13 @@ input {
   line-height: 40px;
   float: left;
 }
+.hdr_btn {
+  float:right;
+  width: 50px;
+  height: 50px;
+  background-color: red;
+}
 
-@media screen and (max-width: 1300px) {
-  .hdr_txt {
-      width: 40%;
-  }
-}
-@media screen and (max-width: 920px) {
-  .hdr_txt {
-      width: 30%;
-  }
-}
-@media screen and (max-width: 750px) {
-  .hdr_txt {
-      width: 20%;
-  }
-}
-@media screen and (max-width: 600px) {
-  .hdr_txt {
-      width: 20%;
-  }
-  .hdr_right {
-    display: none;
-  }
-}
  .hdr_create{
   height: 50px;
   margin-left: 3%;
