--- a/templates/header-footer/header-footer.html
+++ b/templates/header-footer/header-footer.html
@@ -1,12 +1,13 @@
 <template name="header">
   <div class = "hdr">
-    <div class = "hdr_ttl">Jobs in ICT</div>
-    <a href = '/'><div class = "hdr_home">Home</div></a>
-    <div class = "hdr_txt"><input type = "search" id = "search" onsearch = "search()"></div>
-    <div class = "hdr_right">
+    <a href = '/'><div class = "hdr_ttl">Jobs in ICT</div></a>
+    <div class = "hdr_txt" id="searchbox"><input class="inputhp" type = "search" id = "search" onsearch = "search()"></div>
+    <div id = "rightbox">
       <a href = '/create'><div class = "hdr_create">Create</div></a>
+      <!--div class = "hdr_login">{{> loginButtons align="right"}}XXXXXXXXXXXXXXXXXxxxxx</div-->
       <div class = "hdr_login">{{> loginButtons align="right"}}</div>
     </div>
+    <div class="hdr_btn" id="menu"></div>
   </div>
 </template>
 
