--- a/templates/modules/homepage/homepage.html
+++ b/templates/modules/homepage/homepage.html
@@ -21,7 +21,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
           <div class="home-listing-lft-txt" style = "color: {{color}}">{{title}} <div>&nbsp;-&nbsp;{{company}}</div></div>
           <span class="badge" style = "background-color: {{color}}">{{category}}</span>
         </div>
-        <span class="badge fr">{{month}}/{{day}}</span>
+        <span class="badge fr">{{#if isExpired}}Expired. Created on {{/if}}{{month}}/{{day}}</span>
         {{#if isExpired}}
         <button class="home-listing-renew" onclick="Meteor.call('renewJob', '{{_id}}')">Renew</button>
         {{/if}}
