Adds User Listings filter

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -137,3 +137,7 @@ Associated Files: homepage.html, homepage.js and homepage.css
 .purple_fade {
   background-color: #9933ff !important;
 }
+
+.user_fade {
+  background-color: #444444 !important;
+}
