--- a/templates/modules/homepage/homepage.html
+++ b/templates/modules/homepage/homepage.html
@@ -12,6 +12,9 @@ Associated Files: homepage.html, homepage.js and homepage.css
       {{#each categories}}
         <div class="home-tag" id = "{{short}}" style = "background-color: {{color}}"><div class="{{short}}-dot dot"></div>{{name}} &nbsp;&nbsp;{{number}}</div>
       {{/each}}
+      {{#if loggedIn}}
+        <div class="home-tag" id = "User" style = "background-color: #000000"><div class="User-dot dot"></div>Your listings &nbsp;&nbsp;{{userNumber}}</div>
+      {{/if}}
     </div>
 
     <div class="home-listing">
