--- a/templates/header-footer/header-footer.html
+++ b/templates/header-footer/header-footer.html
@@ -3,7 +3,7 @@
     <a href = '/'><div class = "hdr_ttl">Jobs in ICT</div></a>
     <div class = "hdr_txt" id="searchbox"><input class="inputhp" type = "search" id = "search" onsearch = "search()"></div>
     <div id = "rightbox">
-      <a href = '/authCheck'><div class = "hdr_create">Create</div></a>
+      <a href = '/create'><div class = "hdr_create">Create</div></a>
       <!--div class = "hdr_login">{{> loginButtons align="right"}}XXXXXXXXXXXXXXXXXxxxxx</div-->
       <div class = "hdr_login">{{> loginButtons align="right"}}</div>
     </div>
