--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -28,7 +28,7 @@
       {{#if isEmail}}
       Please send an email with your resume attached to: <a href={{url}}>{{url}}</a>
       {{else}}
-      <button type="button" onclick="window.location.href='{{url}}'">Click Here</button>
+      <button type="button" onclick="window.location.replace('{{url}}')">Click Here</button>
       {{/if}}
     </div>
     {{/each}}
