--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -30,8 +30,6 @@
   margin-left: 5%;
   float: left;
   max-width: 400px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 .inputhp {
   border-top-right-radius: 4px;
@@ -39,6 +37,9 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   width: 100%;
+  font-size: 20px;
+  position: relative;
+  top: 2px;
 }
 .hdr_txt {
   height: 50px;
@@ -61,7 +62,7 @@
   color: #FFFFFF;
 }
 
-div.hdr {
+.hdr {
   font-family: 'Lato';
   font-size: 24px;
   color: #FFFFFF;
