--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -96,6 +96,14 @@ Associated Files: homepage.html, homepage.js and homepage.css
   margin-right: 15px;
 }
 
+.home-listing-delete {
+  display: inline-block;
+  padding: 2px 10px;
+  float: right;
+  margin-top: 20px;
+  margin-right: 15px;
+}
+
 .badge {
   display: inline-block;
   min-width: 10px;
