--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -30,6 +30,8 @@
   margin-left: 5%;
   float: left;
   max-width: 400px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .inputhp {
   border-top-right-radius: 4px;
@@ -37,9 +39,6 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   width: 100%;
-  font-size: 20px;
-  position: relative;
-  top: 2px;
 }
 .hdr_txt {
   height: 50px;
@@ -62,7 +61,7 @@
   color: #FFFFFF;
 }
 
-.hdr {
+div.hdr {
   font-family: 'Lato';
   font-size: 24px;
   color: #FFFFFF;
