Create listing fix/Tag update
-Create Listing no longer lets users leave title/company/description
blank
-Create Listing no longer lets category/application method to be left
unchecked
-informs user of what needs to be completed

-tag selection indicator changed from circle to x

--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -1,6 +1,7 @@
 <template name="main">
   <div class = "main">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     {{> header}}
     <div class = "headpush"></div>
     {{> yield}}
