--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -37,6 +37,9 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   width: 100%;
+  font-size: 20px;
+  position: relative;
+  top: 2px;
 }
 .hdr_txt {
   height: 50px;
@@ -59,7 +62,7 @@
   color: #FFFFFF;
 }
 
-div.hdr {
+.hdr {
   font-family: 'Lato';
   font-size: 24px;
   color: #FFFFFF;
