--- a/stylesheets/view_listing.css
+++ b/stylesheets/view_listing.css
@@ -69,3 +69,31 @@
   font-size:18px;
   font-weight: 600;
 }
+.emailForm {
+  position: absolute;
+  top:30px;
+  left: 30px;
+  right: auto;
+  width: auto;
+  height: auto;
+  background-color: #ccccb3;
+  display: none;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  padding:10px;
+}
+.close {
+  width: 30px;
+  height: 30px;
+  float: right;
+  cursor: pointer;
+}
+.effirst {
+  margin-top:10px;
+  margin-bottom:10px;
+}
+
+.efrest {
+  margin-bottom:10px;
+}
