--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -6,6 +6,20 @@
 <template name="view_listing">
   <div class = "view">
     {{#each job}}
+    {{#if isOwner}}
+    <div class="buttons">
+      {{#if isExpired}}
+      <button type="button" class="renew-btn btn-top">Renew</button>
+      {{/if}}
+      <button type="button" class="edit-btn btn-top">Edit</button>
+      <button type="button" class="delete-btn btn-top">Delete</button>
+    </div>
+    <div class="confirm">
+      <div class="confirm-text">Are you sure?</div>
+      <button type="button" class="yes-btn btn-top">Yes</button>
+      <button type="button" class="no-btn btn-top">No</button>
+    </div>
+    {{/if}}
     <div class=titlebox>
       <div class="title">
         {{title}}
