Comments out direct email link

--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -69,7 +69,7 @@
         </form>
       </div>
       <button type="button" id="emailform">Click Here</button>
-      Please send an email with your resume attached to: <a href={{url}}>{{url}}</a>
+      <!--Please send an email with your resume attached to: <a href={{url}}>{{url}}</a>-->
       {{else}}
       <button type="button" onclick="window.location.href='{{url}}'">Click Here</button>
       {{/if}}
