Adjusts list date  to be more clear

--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -24,7 +24,7 @@
       <div class="title">
         {{title}}
       </div>
-      <div class="publishedDate">{{createdAt}}</div>
+      <div class="publishedDate">Posted on: {{createdAt}}</div>
       <div class="info">
         <span class="company">{{company}}</span> - <span class="category">{{category}}</span>
       </div>
