Adds email functionality to form UI
Click on a listing, then the Apply button, fill out the info, then hit
submit.  The job owner should receive an email.

--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -53,7 +53,7 @@
           </div>
           <div class="efresty">
             Phone:<br>
-            <input type="text" name="phone">
+            <input type="text" name="phone" id="phone">
           </div>
           <div class="efrest" >
             Message*:<br>
@@ -64,7 +64,7 @@
             <input type="text" name="resumelink" id="resumelink">
           </div>
           <div class="efrest">
-            <input type="submit" value="Submit" id="submit">  *Required
+            <input type="submit" id="submit">  *Required
           </div>
         </form>
       </div>
