--- a/templates/modules/view_listing/view_listing.html
+++ b/templates/modules/view_listing/view_listing.html
@@ -31,11 +31,11 @@
     </div>
     <div class="description">
       <div class=heading>Description:</div>
-      {{description}}
+      {{#markdown}}{{description}}{{/markdown}}
     </div>
     <div class="perks">
       <div class=heading>Perks:</div>
-      {{perks}}
+      {{#markdown}}{{perks}}{{/markdown}}
     </div>
     <div class="url">
       <div class=heading>To apply:</div>
