--- a/templates/modules/homepage/homepage.html
+++ b/templates/modules/homepage/homepage.html
@@ -18,13 +18,20 @@ Associated Files: homepage.html, homepage.js and homepage.css
     </div>
 
     <div class="home-listing">
+      <div class="listing-panel">
       {{#each listing}}
-      <a href="/view/{{_id}}">
-        <div class = "home-listing-lft">
-          <div class="home-listing-lft-txt" style = "color: {{color}}">{{title}} <div>&nbsp;-&nbsp;{{company}}</div></div>
-          <span class="badge" style = "background-color: {{color}}">{{category}}</span>
+      <a href="/view/{{_id}}" style="">
+        <div class = "home-listing-lft" style="border-left-color:{{color}};">
         </div>
-        <span class="badge fr">{{#if isExpired}}Expired. {{/if}}Posted on {{month}}/{{day}}</span>
+        <div class="home-listing-lft-txt">
+          <div class="listing-title listingText" style="font-weight:600">{{title}}</div>
+          <div class="listing-company listingText" style="opacity:.7;">{{company}}</div>
+          <div class="listing-category listingText" style="color:{{color}}; opacity:.8;">{{category}}</div>
+        </div>
+          <!--<div class="home-listing-lft-txt" style = "color: {{color}} ">{{title}} <div>&nbsp;-&nbsp;{{company}}</div></div>
+          <span class="badge" style = "background-color: {{color}}">{{category}}</span>-->
+
+        <!--<span class="badge fr">{{#if isExpired}}Expired. {{/if}}Posted on {{month}}/{{day}}</span>
         {{#if isExpired}}
         <button class="home-listing-renew" onclick="Meteor.call('renewJob', '{{_id}}')">Renew</button>
         {{/if}}
@@ -34,9 +41,10 @@ Associated Files: homepage.html, homepage.js and homepage.css
           {{#if isInRole 'admin'}}
           <button class="home-listing-delete" onclick="Meteor.call('deleteJob', '{{_id}}')">Delete</button>
           {{/if}}
-        {{/if}}
+        {{/if}}-->
       </a>
       {{/each}}
+      </div>
     </div>
   </div>
 </template>
