Header & Footer Fix

--- a/templates/header-footer/header-footer.html
+++ b/templates/header-footer/header-footer.html
@@ -9,9 +9,8 @@
       <div class="inputhp">
          <input type = "search" id = "search" onsearch = "search()">
       </div>
+      <div class="search_btn"><i class="fa fa-search" id="icon"></i></div>
     </div>
-    <div class="search_btn"><i class="fa fa-search"></i></div>
-
     <div class="hdr_btn" id="menu"></div>
   </div>
 </template>
