--- a/stylesheets/create_listing.css
+++ b/stylesheets/create_listing.css
@@ -6,18 +6,56 @@
   display:none;
 }
 
+textarea:focus, input:focus{
+    outline: none;
+}
 /* Temporary Fix */
 .cr_lstng {
-  margin: 60px 0px 0px 30px;
+  margin: 20px 0px 0px 30px;
 }
 
 .cr_lstng-applicationURL {
   display:none;
 }
 
-.cr_lstng-title {
+.cr_lstng-list {
   margin-top:10px;
   margin-bottom:10px;
+}
+.cr_lstng-list span {
+  border-radius: 10px;
+  padding: 2px 3px;
+  font-size: 12px;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 10px;
+  margin-right: 5px;
+  background-color: #9EA2A3;
+}
+
+.cr_lstng-list input, .cr_lstng-list textarea {
+  margin-top: 5px;
+  border-radius: 10px;
+  padding: 2px 3px;
+  font-family:sans-serif;
+}
+
+.cr_lstng-list .title {
+  font-size: 40px;
+  color:#59595B;
+  font-weight: bold;
+}
+
+.cr_lstng-list .company {
+  font-size: 26px;
+  color: #9F9F9F;
+  font-weight: bold;
+}
+.cr_lstng-list textarea {
+  font-size: 19px;
+  color: #000000;
 }
 
 .cr_lstng-company {
