--- a/stylesheets/header-footer.css
+++ b/stylesheets/header-footer.css
@@ -10,13 +10,22 @@
   background-color: #ECECEC;
   position: fixed;
   top: 0px;
-  border-bottom: 3px solid #FFCF00;
+  border-bottom: 46px solid #9EA2A3;
   height: 53px;
   padding-top:  8px;
   font-family: 'Lato';
   font-size: 24px;
   color: #9EA2A3;
   line-height: 45px;
+}
+.hdr_lightGray {
+  height:53px;
+  width: 100%;
+}
+.hdr_yellow {
+  height:3px;
+  width: 100%;
+  background-color: #FFCF00;
 }
 
 .hdr_ttl {
@@ -121,6 +130,14 @@
   padding-top: 20px;
   position: fixed;
   bottom: 0px;
+
+}
+
+.footer img {
+  width: 170px;
+  height: 25px;
+  margin-right: 20px;
+  vertical-align: middle;
 }
 
 .footer_txt {
