--- a/stylesheets/view_listing.css
+++ b/stylesheets/view_listing.css
@@ -23,20 +23,32 @@
   float: left;
 }
 
-.titlebox {
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-}
 
 .title {
   margin-top:10px;
-  font-size: 30px;
+  font-size: 40px;
+  font-family:sans-serif;
+  color:#59595B;
+  font-weight: bold;
+}
+.company {
+  color: #9F9F9F;
+  font-size: 26px;
+  font-family:sans-serif;
+}
+
+.category {
+  color: #9F9F9F;
+  font-size: 18px;
+  font-family:sans-serif;
 }
 
 .publishedDate {
+  color: #9F9F9F;
   margin-top: 10px;
   margin-bottom:10px;
-  font-size: 12px;
+  font-size: 19px;
+  font-family:sans-serif;
 }
 
 .info {
@@ -44,24 +56,78 @@
   margin-bottom: 10px;
 }
 
-.description {
-  margin-top:10px;
-  margin-bottom: 10px;
-  font-size: 16px;
-  //white-space: pre-line;
+.titleParagraph {
+/*border-left: 5px solid #ababab;
+padding-left: 10px;*/
 }
 
-.perks {
-  margin-top:10px;
-  margin-bottom:10px;
-  font-size: 16px;
-  //white-space: pre-line;
+.titleParagraph H1{
+  font-size: 19px;
+  font-family:sans-serif;
+  margin-bottom: 0px;
 }
 
+.titleParagraph p{
+  margin-top: 8px;
+  font-size: 15px;
+  font-family:sans-serif;
+}
+.submit {
+  background-color: inherit;
+  border: 0px;
+}
+.box {
+  text-align: right;
+  padding-right: 10px;
+  width:110px;
+  height:25px;
+  border-radius: 3px;
+  border: 1px solid  #ECECEC;
+  margin-top: 30px;
+  margin-left: 29px;
+  font-size: 20px;
+  font-family:sans-serif;
+  color:#ffffff;
+  background-color: #01ACBE;
+  cursor: pointer;
+
+}
+
+.circle {
+  width:40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid  #ECECEC;
+  background-color: #ffffff;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+  top:-35px;
+  left:0px;
+}
+
+.circle .fa {
+  color:#01ACBE;
+  font-size: 25px;
+  padding-top: 10px;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+hr {
+  background:url("/YellowGrayDots.png") repeat-x;
+  background-size: 900px 12px;
+  height:42px;
+/*  background: red; */
+  border:none !important;
+}
 .aplication {
   margin-top:10px;
   margin-bottom: 10px;
   font-size: 16px;
+
 }
 
 .heading {
@@ -69,6 +135,7 @@
   font-size:18px;
   font-weight: 600;
 }
+
 .emailForm {
   position: absolute;
   top:30px;
@@ -82,6 +149,7 @@
   border: 1px solid #e3e3e3;
   border-radius: 4px;
   padding:10px;
+  z-index: 2;
 }
 .close {
   width: 30px;
@@ -96,4 +164,22 @@
 
 .efrest {
   margin-bottom:10px;
+}
+.efrest span, .effirst span {
+  border-radius: 10px;
+  padding: 2px 3px;
+  font-size: 12px;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 10px;
+  margin-right: 5px;
+  background-color: #9EA2A3;
+}
+.efrest input, .effirst input, .efrest textarea {
+  margin-top: 5px;
+  border-radius: 10px;
+  padding: 2px 3px;
+  font-family:sans-serif;
 }
